servlet-proxy-creator now requires port
Providing port ensures that each proxy can expose its WebService

--- a/net.vandut.agh.magisterka/servlet-proxy-creator/src/main/webapp/upload.html
+++ b/net.vandut.agh.magisterka/servlet-proxy-creator/src/main/webapp/upload.html
@@ -40,6 +40,9 @@ $(document).ready(function(){
                 <input id="wsdl_location_internet_input" type="text" name="url" size="45" disabled />
             </p>
             <p>
+            	Unique port to use (e.g. 8080): <input id="port" type="text" name="port" value="8080" />
+            </p>
+            <p>
                 <input type="submit" value="Upload WSDL file" name="push_button" />
             </p>
         </form>
